--- a/config/spring-cloud-integration/spring-cloud-integration-dev.yml
+++ b/config/spring-cloud-integration/spring-cloud-integration-dev.yml
@@ -1,55 +1,36 @@
-# Production Environment Configuration
+# Development environment configuration
 app:
-  environment: "production"
-  debug: false
-  configSource: "github-prod-profile"
+  name: "Spring Cloud Integration"
+  version: "2.0.0-dev"
+  environment: "development"
+  configSource: "github-dev-profile"
+  debug: true
 
-# Production Feature Flags (conservative)
+# Development feature flags
 features:
-  # Stable features only
+  github-config: true
+  vault-secrets: true
+  config-server: true
+  user-management: true
   advanced-search: true
   premium-features: true
-  beta-testing: false  # Disable beta in production
-  mobile-app: false    # Not ready for production
-  
-  # Production optimizations
-  performance-monitoring: true
-  error-tracking: true
-  analytics: true
+  beta-testing: true
+  debug-mode: true
 
-# Production Settings
+# Development settings
 settings:
   pagination:
-    defaultPageSize: 50
-    maxPageSize: 500
+    defaultPageSize: 5
   cache:
-    ttl: 7200  # Longer cache in production
-    maxSize: 5000
+    ttl: 60
   api:
-    timeout: 15
-    retries: 5
+    timeout: 60
+    retries: 1
 
-# Production Logging (minimal)
+# Development logging
 logging:
   level:
-    com.example: WARN
-    org.springframework.cloud.config: WARN
-    org.springframework.security: WARN
-    root: ERROR
-
-# Production Database
-database:
-  connection:
-    maxPoolSize: 50  # Larger pool for production
-    minPoolSize: 10
-  jpa:
-    showSql: false
-    ddlAuto: "none"  # Never modify schema in production
-
-# Production External Services
-external:
-  services:
-    weatherApi:
-      timeout: 3000  # Faster timeout in production
-    newsApi:
-      timeout: 5000
+    com.example: DEBUG
+    org.springframework.cloud.config: DEBUG
+    org.springframework.security: DEBUG
+    root: INFO
