--- a/config/spring-cloud-integration/spring-cloud-integration-prod.yml
+++ b/config/spring-cloud-integration/spring-cloud-integration-prod.yml
@@ -1,55 +1,37 @@
-# Production Environment Configuration
+# Production environment configuration
 app:
+  name: "Spring Cloud Integration"
+  version: "2.0.0"
   environment: "production"
-  debug: false
   configSource: "github-prod-profile"
+  debug: false
 
-# Production Feature Flags (conservative)
+# Production feature flags (conservative)
 features:
-  # Stable features only
+  github-config: true
+  vault-secrets: true
+  config-server: true
+  user-management: true
   advanced-search: true
   premium-features: true
-  beta-testing: false  # Disable beta in production
-  mobile-app: false    # Not ready for production
-  
-  # Production optimizations
+  beta-testing: false
   performance-monitoring: true
-  error-tracking: true
-  analytics: true
 
-# Production Settings
+# Production settings
 settings:
   pagination:
     defaultPageSize: 50
     maxPageSize: 500
   cache:
-    ttl: 7200  # Longer cache in production
+    ttl: 7200
     maxSize: 5000
   api:
     timeout: 15
     retries: 5
 
-# Production Logging (minimal)
+# Production logging (minimal)
 logging:
   level:
     com.example: WARN
     org.springframework.cloud.config: WARN
-    org.springframework.security: WARN
     root: ERROR
-
-# Production Database
-database:
-  connection:
-    maxPoolSize: 50  # Larger pool for production
-    minPoolSize: 10
-  jpa:
-    showSql: false
-    ddlAuto: "none"  # Never modify schema in production
-
-# Production External Services
-external:
-  services:
-    weatherApi:
-      timeout: 3000  # Faster timeout in production
-    newsApi:
-      timeout: 5000
